# event_logger

./: .gitignore  UdpServer  config.json  udp_server.cabal
script/git/: git-log2json.sh  git-user-info.sh
src/: Main.hs  Notification.hs  Store.hs
